--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,7 @@ h4{
 #collapseExample{
 	background: #41521F;
 	color: whitesmoke;
-	padding: 7px 0px 7px 25px;
+	padding: 9% 0px 9% 9%;
 	height: auto;
 	border: 0.5px solid #41521F;
 	border-radius: 10px;
